# minc-widgets

./: CMakeLists.txt  README.md  volmash  volrot
converters/: ecat2hdf5.pl
ecat2hdf5/: ecat2hdf5
gennlxfm/: gennlxfm
img2mnc/: img2mnc
mincanon/: minc_de-dicomerise  minc_de-spierise  mincanon  mincclean
mincbigaverage/: mincbigaverage
mincnorm/: .#mincnorm.1.3  mincnorm
nlpfit/: example.conf  nlpfit
volalign/: volalign
volcentre/: volcentre
volextents/: volextents
volflip/: volflip
voliso/: voliso
volmash/: volmash
volpad/: volpad
volrestack/: volrestack
volrot/: volrot
volsymm/: volsymm
volunfold/: volunfold
xfmavg/: mail_from_pt.txt  xfmavg
xfmdecomp/: xfmdecomp.pl
xfmflip/: xfmflip
