# CMakeFiles.txt for the minc-widgets
#
# 
#
# Andrew Janke - a.janke@gmail.com
# Vladimir S. FONOV - vladimir.fonov@gmail.com

PROJECT(minc-widgets)


INSTALL(PROGRAMS
   ecat2hdf5
   gennlxfm
   img2mnc
   mincbigaverage
   mincnorm
   nlpfit
   volalign
   volcentre
   volextents
   volflip
   voliso
   volmash
   volpad
   volrot
   volsymm
   xfmavg
   xfmdecomp
   xfmflip
   DESTINATION bin )

